# vibevac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: product-brief.md  releasing.md  safety-model.md
docs/launch/: checklist.md  reddit-macapps.md  show-hn.md
src/: cli.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  lib.rs  main.rs
src/domain/: types.ts
src/render/: report.ts
src/server/: ui-server.ts
src/services/: active-processes.ts  cache-cleanup.ts  cache-inventory.ts  classifier.ts  discovery.ts  disk-usage.ts  git-inspector.ts  scanner.ts  worktree-removal.ts
test/: active-processes.test.ts  batch-operation.test.ts  cache-cleanup.test.ts  cache-inventory.test.ts  classifier.test.ts  cleanup-policy.test.ts  discovery.test.ts  git-inspector.test.ts  report-state.test.ts  report.test.ts  scanner.test.ts  ui-server.test.ts  worktree-removal.test.ts
ui/: index.html  tsconfig.json  vite.config.ts
ui/src/: App.vue  backend.ts  batch-operation.ts  cleanup-policy.ts  report-state.ts  styles.css
