[package]
name = "vibevac"
version = "0.1.0"
description = "Keep the work. Vacuum rebuildable weight from AI coding workspaces."
authors = ["Ilya Moskovkin"]
edition = "2021"

[lib]
name = "vibevac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3"
